pushing the body lower to prevent blue bar overflow.

--- a/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
+++ b/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
@@ -1395,5 +1395,5 @@ h2.benefitsCheckUpTitle {
 .frozenBody {
     overflow-x: hidden;
     overflow-y: hidden;
-    position:fixed;
+    z-index : -1;
 }
